test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u16_sub_const_eval_underflow/src/main.sw
script;

const RESULT: u16 = u16::min() - 1;

fn main() -> u16 {
    RESULT
}
